--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-h1{
-    background-color: blue;
+header,footer {
+    background-color: #1E90FF;
+    color: white;
+    text-align: center;
+    max-width: 800px;
+    padding: .5rem;
+    margin: 1.25rem auto;
 }
