--- a/Portfolio/week1/styles.css
+++ b/Portfolio/week1/styles.css
@@ -19,3 +19,9 @@ footer a{
 li a{
     color: black;
 }
+
+textarea{
+    width:800px;
+    height: 250px;
+    background-color: lightyellow;
+     }
