--- a/Portfolio/Challenge02/book.css
+++ b/Portfolio/Challenge02/book.css
@@ -33,5 +33,17 @@ h1 {
 }
 
 ul {
-    background-color: white;
+    margin: .5em;
+    padding-top: .5em;
+    padding-bottom: 3em;
+    padding-right: 30px;
+
+}
+
+#results {
+    background-color: whitesmoke;
+    margin-right: 10em;
+    margin-left: 10em;
+    margin-top: 3em;
+    margin-bottom: 5em;
 }
