--- a/Portfolio/Challenge02/book.css
+++ b/Portfolio/Challenge02/book.css
@@ -15,13 +15,13 @@ h1 {
     font-size: 70px;
     text-align: center;
     font-family: 'Epilogue', sans-serif;
-    margin: 1px;
+    margin: 10px;
 }
 
 #myform {
     display: flex;
     margin: 0 auto;
-    width: 250px;
+    width: fit-content;
 }
 
 .container {
@@ -29,7 +29,9 @@ h1 {
 }
 
 .center-block {
-    width: 500px;
+    width: 50em;
+
+
 }
 
 ul {
@@ -50,4 +52,26 @@ ul {
 
 li {
     margin: 5px;
+}
+
+input {
+    width: 80%;
+    padding: 10px 10px;
+    box-sizing: border-box;
+}
+
+/*small screen*/
+@media screen and (max-width: 600px) {
+    .center-block {
+        width: 25em;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    #results {
+        margin-left: 2em;
+        margin-right: 2em;
+    }
 }
