--- a/Portfolio/Challenge02/book.css
+++ b/Portfolio/Challenge02/book.css
@@ -2,9 +2,7 @@
 
 body {
     background: url("images/IMG_3571.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-size: cover;
     background-position: center;
     height: 100%;
     margin: 0;
